# rebootcamp

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  tox.ini
data/: default_diffusion_config.yaml  negative_prompts.txt
rebootcamp/: __init__.py  basic-nn.py  capture.py  config.py  diffusion.py  models.py  utils.py
scripts/: analyze_batch_results.ipynb  batch_diffusion.py  diffuse_mic.py
