[project]
name = "rebootcamp"
authors = [{name = "Nikoloz Sirmpilatze", email= "niko.sirbiladze@gmail.com"}]
description = "Tracking my learning of AI/ML during the SWC ReBootcamp 2023"
readme = "README.md"
requires-python = ">=3.8.0"
dynamic = ["version"]

license = {text = "BSD-3-Clause"}

dependencies = ["numpy", "matplotlib", "jax", "jaxlib"]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]

[project.urls]
homepage = "https://github.com/niksirbi/rebootcamp"
bug_tracker = "https://github.com/niksirbi/rebootcamp/issues"
documentation = "https://github.com/niksirbi/rebootcamp"
source_code = "https://github.com/niksirbi/rebootcamp"
user_support = "https://github.com/niksirbi/rebootcamp/issues"

[project.dependencies]


[project.optional-dependencies]
dev = [
	"pytest",
	"pytest-cov",
	"coverage",
	"tox",
	"black",
   	"isort",
    	"mypy",
	"pre-commit",
	"flake8",
 	"setuptools_scm",
]



[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["rebootcamp*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
addopts = "--cov=rebootcamp"

[tool.black]
target-version = ['py38', 'py39', 'py310']
skip-string-normalization = false
line-length = 79
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | examples
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 79

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
  "*.yaml",
  ".bumpversion.cfg",
  "tox.ini",
  "tests/*",
  "tests/test_unit/*",
  "tests/test_integration/*",
  ".flake8"
]
